--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,7 +28,7 @@
   google.charts.load('current', {packages: ['line', 'corechart']});
   google.charts.setOnLoadCallback(drawChart);
 
-  function buildChart(elementId, title, vAxisName, vAxisMax, vAxisFormat, entries) {
+  function buildChart(elementId, title, vAxisName, vAxisOptions, entries) {
     const element = document.getElementById(elementId);
 
     const dataTable = new google.visualization.DataTable();
@@ -39,12 +39,7 @@
     const options = {
       height: 500,
       title,
-      vAxis: {
-        format: vAxisFormat,
-        viewWindow: {
-          max: vAxisMax,
-        },
-      },
+      vAxis: vAxisOptions,
       width: 900,
     };
 
@@ -66,7 +61,7 @@
       return [new Date(created_at), humidity];
     });
 
-    buildChart('chart_temperature', 'Temperature in the last 12 hours', 'Temperature', 40, '## °C', temperatureEntries);
-    buildChart('chart_humidity', 'Humidity in the last 12 hours', 'Humidity', 70, '##,## % RH', humidityEntries);
+    buildChart('chart_temperature', 'Temperature in the last 12 hours', 'Temperature', {format: '## °C', viewWindow: {max: 40, min: -20}}, temperatureEntries);
+    buildChart('chart_humidity', 'Humidity in the last 12 hours', 'Humidity', {format: '##,## % RH', viewWindow: {max: 80, min: 20}}, humidityEntries);
   }
 </script>
