--- a/views/humidity.handlebars
+++ b/views/humidity.handlebars
@@ -1,4 +1,4 @@
-<h2>Humidity</h2>
+<h3 class="s-title">Humidity</h3>
 <div id="chart_humidity" style="width: 900px; height: 500px"></div>
 
 <script type="text/javascript">
