--- a/views/sds_p1.handlebars
+++ b/views/sds_p1.handlebars
@@ -1,4 +1,4 @@
-<h2>Fine dust 10 µm</h2>
+<h3 class="s-title">Fine dust 10 µm</h3>
 <div id="chart_sds_p1" style="width: 900px; height: 500px"></div>
 
 <script type="text/javascript">
