--- a/views/temperature.handlebars
+++ b/views/temperature.handlebars
@@ -1,4 +1,4 @@
-<h2>Temperature</h2>
+<h3 class="s-title">Temperature</h3>
 <div id="chart_temperature" style="width: 900px; height: 500px"></div>
 
 <script type="text/javascript">
