fix: cubic metre

--- a/views/sds_p1.handlebars
+++ b/views/sds_p1.handlebars
@@ -9,7 +9,7 @@
     });
 
     function drawChart() {
-      buildChart('chart_sds_p1', 'Fine dust 10 µm in the last 12 hours', 'Fine dust 10 µm', {format: '##,## µg/m3', viewWindow: {max: 30}}, sdsP1Data);
+      buildChart('chart_sds_p1', 'Fine dust 10 µm in the last 12 hours', 'Fine dust 10 µm', {format: '##,## µg/m^3', viewWindow: {max: 30}}, sdsP1Data);
     }
 
     google.charts.load('current', {packages: ['line', 'corechart']});
