--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="robots" content="none" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Luftdaten Server</title>
+  <title>Luftdaten</title>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript" src="/chart.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.8/spectre.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.8/spectre-exp.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.8/spectre-icons.min.css">
   <link rel="stylesheet" href="/docs.css">
 </head>
 
@@ -22,7 +22,7 @@
     <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
       <div class="docs-brand">
         <a class="docs-logo" href="/">
-          <h2>Luftdaten Server</h2>
+          <h2>Luftdaten</h2>
         </a>
       </div>
       <div class="docs-nav">
