--- a/views/sds_p2.handlebars
+++ b/views/sds_p2.handlebars
@@ -5,7 +5,7 @@
   fetch('/data/sds_p2/?limit=300').then(response => response.json()).then(jsonData => {
     const sdsP2Data = jsonData.map(entry => {
       const {created_at, SDS_P2} = entry;
-      return [createDateFromString(created_at), SDS_P2];
+      return [new Date(created_at), SDS_P2];
     });
 
     function drawChart() {
