--- a/views/humidity.handlebars
+++ b/views/humidity.handlebars
@@ -1,20 +1,37 @@
 <h3 class="s-title">Humidity</h3>
 <div id="chart_humidity" style="width: 900px; height: 500px"></div>
+<div style="text-align: center">
+  <label for="entries">Show</label>
+  <input type="number" min="2" max="10000" id="entries" value="300" disabled />
+  <label for="entries">entries</label>
+</div>
 
-<script type="text/javascript">
-  fetch('/data/humidity/?limit=300').then(response => response.json()).then(jsonData => {
-    const humidityData = jsonData.map(entry => {
-      const {created_at, humidity} = entry;
-      return [new Date(created_at), humidity];
+<script type="text/javascript" async defer>
+  const options = buildOptions('Humidity in the last 24 hours', '## \'%');
+
+  google.charts.load('current', {packages: ['line', 'corechart'], language: 'en-GB'})
+    .then(() => getData('humidity'))
+    .then(jsonData => {
+      const humidityData = jsonData.map(entry => {
+        const {created_at, humidity} = entry;
+        return [new Date(created_at), humidity];
+      });
+
+      function updateTable(limit) {
+        const dataTable = buildDataTable('Humidity', humidityData.slice(0, limit));
+        buildChart('chart_humidity').draw(dataTable, options);
+      }
+
+      document.getElementById('entries').addEventListener('input', event => {
+        try {
+          const limit = parseInt(event.target.value, 10);
+          updateTable(limit)
+        } catch (error) {
+          console.error(error);
+        }
+      }, {passive: true});
+
+      updateTable(300);
+      document.getElementById('entries').disabled = false;
     });
-
-    console.log(humidityData[0])
-
-    function drawChart() {
-      buildChart('chart_humidity', 'Humidity in the last 12 hours', 'Humidity', {format: '##,## % RH', viewWindow: {max: 80}}, humidityData);
-    }
-
-    google.charts.load('current', {packages: ['line', 'corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-  });
 </script>
