--- a/views/sds_p2.handlebars
+++ b/views/sds_p2.handlebars
@@ -1,18 +1,37 @@
-<h3 class="s-title">Fine dust 2.5 µm</h3>
+<h3 class="s-title">Fine dust (2.5 µm)</h3>
 <div id="chart_sds_p2" style="width: 900px; height: 500px"></div>
+<div style="text-align: center">
+  <label for="entries">Show</label>
+  <input type="number" min="2" max="10000" id="entries" value="300" disabled />
+  <label for="entries">entries</label>
+</div>
 
-<script type="text/javascript">
-  fetch('/data/sds_p2/?limit=300').then(response => response.json()).then(jsonData => {
-    const sdsP2Data = jsonData.map(entry => {
-      const {created_at, SDS_P2} = entry;
-      return [new Date(created_at), SDS_P2];
+<script type="text/javascript" async defer>
+  const options = buildOptions('Fine dust (10 µm) in the last 12 hours', '##,## µg/m^3');
+
+  google.charts.load('current', {packages: ['line', 'corechart'], language: 'en-GB'})
+    .then(() => getData('sds_p2'))
+    .then(jsonData => {
+      const sdsP1Data = jsonData.map(entry => {
+        const {created_at, SDS_P2} = entry;
+        return [new Date(created_at), SDS_P2];
+      });
+
+      function updateTable(limit) {
+        const dataTable = buildDataTable('Fine dust (2.5 µm)', sdsP1Data.slice(0, limit));
+        buildChart('chart_sds_p2').draw(dataTable, options);
+      }
+
+      document.getElementById('entries').addEventListener('input', event => {
+        try {
+          const limit = parseInt(event.target.value, 10);
+          updateTable(limit)
+        } catch (error) {
+          console.error(error);
+        }
+      }, {passive: true});
+
+      updateTable(300);
+      document.getElementById('entries').disabled = false;
     });
-
-    function drawChart() {
-      buildChart('chart_sds_p2', 'Fine dust 2.5 µm in the last 12 hours', 'Fine dust 2.5 µm', {format: '##,## µg/m^3', viewWindow: {max: 30}}, sdsP2Data);
-    }
-
-    google.charts.load('current', {packages: ['line', 'corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-  });
 </script>
