--- a/views/temperature.handlebars
+++ b/views/temperature.handlebars
@@ -1,18 +1,37 @@
 <h3 class="s-title">Temperature</h3>
 <div id="chart_temperature" style="width: 900px; height: 500px"></div>
+<div style="text-align: center">
+  <label for="entries">Show</label>
+  <input type="number" min="2" max="10000" id="entries" value="300" disabled />
+  <label for="entries">entries</label>
+</div>
 
-<script type="text/javascript">
-  fetch('/data/temperature/?limit=300').then(response => response.json()).then(jsonData => {
-    const temperatureData = jsonData.map(entry => {
-      const {created_at, temperature} = entry;
-      return [new Date(created_at), temperature];
+<script type="text/javascript" async defer>
+  const options = buildOptions('Temperature in the last 24 hours', '## °C');
+
+  google.charts.load('current', {packages: ['line', 'corechart'], language: 'en-GB'})
+    .then(() => getData('temperature'))
+    .then(jsonData => {
+      const temperatureData = jsonData.map(entry => {
+        const {created_at, temperature} = entry;
+        return [new Date(created_at), temperature];
+      });
+
+      function updateTable(limit) {
+        const dataTable = buildDataTable('Temperature', temperatureData.slice(0, limit));
+        buildChart('chart_temperature').draw(dataTable, options);
+      }
+
+      document.getElementById('entries').addEventListener('input', event => {
+        try {
+          const limit = parseInt(event.target.value, 10);
+          updateTable(limit)
+        } catch (error) {
+          console.error(error);
+        }
+      }, {passive: true});
+
+      updateTable(300);
+      document.getElementById('entries').disabled = false;
     });
-
-    function drawChart() {
-      buildChart('chart_temperature', 'Temperature in the last 12 hours', 'Temperature', {format: '## °C', viewWindow: {max: 50, min: -20}}, temperatureData);
-    }
-
-    google.charts.load('current', {packages: ['line', 'corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-  });
 </script>
